<resources>
    <string name="app_name">OceanApp</string>
    <string name="hstext1">Sharking Finning is the act of removing fins from sharks and discarding the rest of the shark back into the ocean. This act is prohibited in many countries.The sharks are often still alive when discarded, but without their fins. Unable to swim effectively, they sink to the bottom of the ocean and die of suffocation or are eaten by other predators. Shark finning at sea enables fishing vessels to increase profitability and increase the number of sharks </string>
    <string name="hstext1_2">harvested, as they must only store and transport the fins, by far the most profitable part of the shark; the shark meat is bulky to transport.Many countries have banned this practice and require the whole shark to be brought back to port before removing the fins.</string>
    <string name="hstext2">\nThe overfishing of sharks has serious effects for the entire marine food chain in some ecosystems. A study found that removing sharks from a reef environment in the Caribbean had a trickling effect on other species. Without sharks, carnivorous fish that the sharks usually fed on thrived. The carnivorous fish, in turn, preyed on parrotfish that kept the corals clean. In time, the reefs changed from one dominated by coral to one overrun by algae.</string>
    <string name="watch">WATCH A VIDEO</string>
    <string name="cb">Coral bleaching is the process when corals become white due to various stressors, such as changes in temperature, light, or nutrients. Bleaching occurs when coral polyps expel the algae (zooxanthellae) that live inside their tissue, causing the coral to turn white.The zooxanthellae are photosynthetic, and as the water temperature rises, they begin to produce reactive oxygen species. This is toxic to the coral, so the coral</string>
    <string name="cb2"> expels the zooxanthellae. Since the zooxanthellae produce the majority of coral pigmentation,the coral tissue becomes transparent, revealing the coral skeleton made of calcium carbonate. Most bleached corals appear bright white, but some are pastel blue, yellow, or pink due to proteins in the coral.</string>
    <string name="of">Overfishing is the removal of a species of fish (i.e. fishing) from a body of water at a rate greater than that the species can replenish its population naturally (i.e. the overexploitation of the fishery\'s existing fish stock), resulting in the species becoming increasingly underpopulated in that area. Overfishing can occur in water bodies of any sizes, such as ponds, wetlands, rivers, lakes or oceans, and can result in</string>
    <string name="of2">resource depletion, reduced biological growth rates and low biomass levels. Sustained overfishing can lead to critical depensation, where the fish population is no longer able to sustain itself. Some forms of overfishing, such as the overfishing of sharks, has led to the upset of entire marine ecosystems.Types of overfishing include: growth overfishing, recruitment overfishing, ecosystem overfishing.</string>
    <string name="ml">Marine litter is human-created waste that has deliberately or accidentally been released in a sea or ocean. Floating oceanic debris tends to accumulate at the center of gyres and on coastlines, frequently washing aground, when it is known as beach litter or tidewrack. Deliberate disposal of wastes at sea is called ocean dumping. Naturally occurring debris, such as driftwood and drift seeds, are </string>
    <string name="ml2">also present. With the increasing use of plastic, human influence has become an issue as many types of (petrochemical) plastics do not biodegrade quickly, as would natural or organic materials. The largest single type of plastic pollution (~10 %) and majority of large plastic in the oceans is discarded and lost nets from the fishing industry. Waterborne plastic poses a serious threat to fish, seabirds, marine reptiles, and marine mammals, as well as to boats and coasts.Dumping, container spillages, litter washed into storm drains and waterways and wind-blown landfill waste all contribute to this problem. This increased water pollution has caused serious negative effects such as discarded fishing nets capturing animals, concentration of plastic debris in massive marine garbage patches, and increasing concentrations of contaminants in the food chain.</string>
</resources>